Implement lightbox for image

--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
   <div id="icon-grid-viewport">
     <div id="icon-grid"></div>
   </div>
+  
+  <!-- Lightbox Component -->
+  <div id="lightbox" class="lightbox">
+    <div class="lightbox-content">
+      <span class="close-btn">&times;</span>
+      <img id="lightbox-img" src="" alt="">
+      <div class="lightbox-caption"></div>
+      <div class="lightbox-buttons">
+        <button class="buy-btn">Buy all icon (No Watermark)</button>
+        <button class="copy-btn">Copy this image (Watermark)</button>
+      </div>
+    </div>
+  </div>
+  
   <script src="app.js"></script>
 </body>
 </html>
