--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     </div>
   </div>
   
+  <!-- Banner Ads Container -->
+  <div id="ad-container" class="ad-container"></div>
+  
   <script src="app.js"></script>
+  
+  <!-- Ad Scripts will be loaded dynamically via JavaScript -->
 </body>
 </html>
