Change Web Name

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>FuriconHub</title>
+  <title>Petmemoji</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/home.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <div class="logo">FuriconHub</div>
+    <div class="logo">Petmemoji</div>
   </header>
   <div id="icon-grid-viewport">
     <div id="icon-grid"></div>
